# LiteReality

./: .gitignore  Dockerfile  README.md  example_scans_test.sh  pyproject.toml  readme.md  script.sh
asset/pbr_annotations/: category_tree.json  gpt_descriptions.json
litereality/LR_mat_painting/: Material_refinements.py  Object_showcase.py  Onboarding_stitich_image.py  Retrieval_material_with_LLM.py  VLM_final_selection.py  VLM_pattern_analysis.py  apply_mat_rotate.py  cluster_aware_processing.py  cluster_material_selection.py  collect_visualization_log.py  resize_texture.py  run.sh  scene_run.sh
litereality/LR_mat_painting/prompts/: __init__.py  base.py  categories.py  materials.py  vlm_phases.py
litereality/LR_mat_painting/utils/: Decompose_mesh.py  Render_Original_cycle.py  extract_image.py  gpt4_query_materials.py  gpt_query_summary.py  output_formatter.py  qwen_model_manager.py  qwen_query_materials.py  vlm_logger.py
litereality/LR_preprocessing/: bbox_polish.py  preprocessing.py
litereality/LR_preprocessing/scene_parsing/: collisionsolver.py  holes_utils.py  layout_parsing.py  layout_utils.py  scene_graph.py  scene_parsing.py
litereality/LR_preprocessing/scene_parsing/utils/: scenegraph_utils.py  (+1 more)
litereality/LR_preprocessing/utils/: extract_image.py  scannerapp_utils.py  utils.py
litereality/LR_procedural_recon/: export_videos.py  integration_blender_upgrade.py  integration_blender_upgrade_smooth.py
litereality/LR_retrieval/: identical_clustering.py  main_qwen.py  prepare_for_painting.py  qwan.py  utils.py
litereality/utils/: download_example_scans.py  download_pretrained_weights.py  install_blender.sh  litereality_database_download.py  setup_grounding_dino.py
